--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Click for Surprise!</title>
   <style>
     body {
-      background-image: url('https://i.ibb.co/LdCmy4xf/6adb2e4713d2c97db52e4972793a8a20563d56acc1f3421ba01d3d5e618ba4b3-0.jpg');
+      background-image: url(''); /* Replace with your desired image */
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
@@ -57,6 +57,7 @@
   <script>
     function revealWish() {
       document.body.classList.add('show');
+      // Generate confetti
       for (let i = 0; i < 100; i++) {
         let confetti = document.createElement('div');
         confetti.className = 'confetti';
@@ -66,8 +67,10 @@
         confetti.style.width = confetti.style.height = Math.random() * 8 + 4 + 'px';
         document.body.appendChild(confetti);
       }
+      // Remove click after first trigger
       document.body.onclick = null;
     }
   </script>
 </body>
 </html>
+<a href="https://ibb.co/tpbg6yq5"><img src="https://i.ibb.co/LdCmy4xf/6adb2e4713d2c97db52e4972793a8a20563d56acc1f3421ba01d3d5e618ba4b3-0.jpg" alt="6adb2e4713d2c97db52e4972793a8a20563d56acc1f3421ba01d3d5e618ba4b3-0" border="0"></a>
